<resources>
    <string name="app_name">Project X</string>

    <string name="log_out">Log out</string>

    <!--  User Auth  -->
    <string name="welcome">Welcome</string>
    <string name="email_label">Email address</string>
    <string name="password_label">Password</string>
    <string name="log_in">Log in</string>
    <string name="wrong_data">Wrong login or password</string>
    <string name="do_not_have_account"><u>I don\'t have an account</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="registration_failed">Registration failed</string>
    <string name="authentication_failed">Authentication failed</string>

    <!--  HotelDetailsFragment  -->
    <string name="overview">Overview</string>
    <string name="gallery">Gallery</string>
    <string name="contacts">Contacts</string>

    <!--  HotelDetailsContacts  -->
    <string name="contact_us">Contact us</string>
    <string name="find_us">Find us</string>
    <string name="contact_format">%1$s\n%2$s</string>
    <string name="order">Order</string>
    <string name="successful_order">Successfully ordered</string>
</resources>